@@ -52,6 +52,13 @@
 #include "forests/evmxd_timesreal.h"
 #endif
 
+
+namespace MEDDLY {
+    // TBD: fix this:
+    extern bool libraryRunning;
+    void purgeMarkedOperations();
+};
+
 // #define DEBUG_CLEANUP
 // #define DUMP_ON_FOREST_DESTROY
 
@@ -500,4 +507,33 @@ void MEDDLY::expert_domain::read(input &s)
   s.stripWS();
   s.consumeKeyword("mod");
 }
+
+//----------------------------------------------------------------------
+// front end - create and destroy domains
+//----------------------------------------------------------------------
+
+MEDDLY::domain* MEDDLY::createDomain(variable** vars, int N)
+{
+  if (!libraryRunning) throw error(error::UNINITIALIZED, __FILE__, __LINE__);
+  return new expert_domain(vars, N);
+}
+
+MEDDLY::domain* MEDDLY::createDomainBottomUp(const int* bounds, int N)
+{
+  if (!libraryRunning) throw error(error::UNINITIALIZED, __FILE__, __LINE__);
+  domain* d = new expert_domain(0, 0);
+  d->createVariablesBottomUp(bounds, N);
+  return d;
+}
+
+void MEDDLY::destroyDomain(MEDDLY::domain* &d)
+{
+  if (0==d) return;
+  if (!libraryRunning) throw error(error::UNINITIALIZED, __FILE__, __LINE__);
+  d->markForDeletion();
+  purgeMarkedOperations();
+  delete d;
+  d = 0;
+}
+
 
