@@ -271,62 +271,8 @@ namespace MEDDLY {
   const char* getLibraryInfo(int what = 0);
 
   // ******************************************************************
-  // *                   object creation  functions                   *
-  // ******************************************************************
-
-  /** Front-end function to create a domain with the given variables.
-        @param  vars    List of variables, in order.
-                        vars[i] gives the variable at level i.
-                        Note that vars[0] should be 0.
-        @param  N       Number of variables.
-                        vars[N] refers to the top-most variable.
-
-        @return A new domain.
-  */
-  domain* createDomain(variable** vars, int N);
-
-  /** Front-end function to create an empty domain.
-      This is required because domain is an abstract class.
-  */
-  domain* createDomain();
-
-  /** Front-end function to create a domain with given variable bounds.
-      Equivalent to creating an empty domain and then building the
-      domain bottom up.
-
-        @param  bounds  variable bounds.
-                        bounds[i] gives the bound for the variable
-                        at level i+1.
-                        If bound<=0, the variable is marked as extensible,
-                        with initial bound as abs(bound).
-                        Note: an extensible variable has a range [1 .. +infinity].
-        @param  N       Number of variables.
-
-        @return A new domain.
-  */
-  domain* createDomainBottomUp(const int* bounds, int N);
-
-/* Commented out as of version 0.10
-#ifdef _MSC_VER
-  __declspec(deprecated)
-#endif
-#ifdef __GNUC__
-  __attribute__ ((deprecated))
-#endif
-  /// This function is deprecated as of version 0.4;
-  /// use "createDomain" instead.
-  domain* MEDDLY_createDomain();
-*/
-
-
-  // ******************************************************************
   // *                  object destruction functions                  *
   // ******************************************************************
-
-  /** Front-end function to destroy a domain.
-      For consistency.
-  */
-  void destroyDomain(domain* &d);
 
   /** Front-end function to destroy a forest.
   */
